@@ -7,7 +7,7 @@ AC_CANONICAL_SYSTEM
 
 GAMIN_MAJOR_VERSION=0
 GAMIN_MINOR_VERSION=0
-GAMIN_MICRO_VERSION=6
+GAMIN_MICRO_VERSION=7
 GAMIN_VERSION=$GAMIN_MAJOR_VERSION.$GAMIN_MINOR_VERSION.$GAMIN_MICRO_VERSION$GAMIN_MICRO_VERSION_SUFFIX
 GAMIN_VERSION_INFO=`expr $GAMIN_MAJOR_VERSION + $GAMIN_MINOR_VERSION`:$GAMIN_MICRO_VERSION:$GAMIN_MINOR_VERSION
 
